--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-community/datetimepicker": "^6.1.0",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-picker/picker": "2.2.1",
+    "@react-navigation/bottom-tabs": "^6.2.0",
+    "@react-navigation/material-bottom-tabs": "^6.1.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "@react-navigation/stack": "^6.1.1",
@@ -20,10 +24,16 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-datefield": "^0.3.5",
+    "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "~2.1.0",
+    "react-native-paper": "^4.11.2",
+    "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "^2.4.1",
     "react-native-safe-area-context": "^4.1.2",
     "react-native-screens": "^3.13.1",
+    "react-native-ui-xg": "0.0.6",
+    "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
